--- a/src/content/portfolio/using-mdx.mdx
+++ b/src/content/portfolio/using-mdx.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Using MDX"
 description: "Lorem ipsum dolor sit amet"
-pubDate: "Jun 01 2024"
+pubDate: "Jan 28 2026"
 heroImage: "/blog-placeholder-5.jpg"
+postOrder: 6
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
