--- a/src/content/portfolio/using-mdx.mdx
+++ b/src/content/portfolio/using-mdx.mdx
@@ -2,7 +2,7 @@
 title: "Using MDX"
 description: "Lorem ipsum dolor sit amet"
 pubDate: "Jan 28 2026"
-heroImage: "/blog-placeholder-5.jpg"
+# heroImage: "/blog-placeholder-5.jpg"
 postOrder: 6
 ---
 
