More content for blog

--- a/src/content/portfolio/4p1s.md
+++ b/src/content/portfolio/4p1s.md
@@ -1,6 +1,7 @@
 ---
 title: "A fun game idea concept: 4Players1Snake"
 description: ""
+tags: ["code"]
 pubDate: "Jan 28 2026"
 heroImage: "/blog/4p1s.jpg"
 postOrder: 9
