--- a/src/content/portfolio/using-mdx.mdx
+++ b/src/content/portfolio/using-mdx.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Banner CMS"
 description: ""
+tags: ["code"]
 pubDate: "Jan 28 2026"
 heroImage: "/blog/banner-cms-cover.png"
 postOrder: 6
